tests/ui/higher-ranked/trait-bounds/normalize-under-binder/assoc-type-projection-in-dyn-and-fn.stderr
error[E0277]: the trait bound `for<'a> (): Trait2<'a>` is not satisfied
  --> $DIR/assoc-type-projection-in-dyn-and-fn.rs:12:40
   |
LL | fn _ice(param: Box<dyn for <'a> Trait1<<() as Trait2<'a>>::Ty>>) {
   |                                        ^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'a> Trait2<'a>` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/assoc-type-projection-in-dyn-and-fn.rs:8:1
   |
LL | trait Trait2<'a> {
   | ^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `for<'a> (): Trait2<'a>` is not satisfied
  --> $DIR/assoc-type-projection-in-dyn-and-fn.rs:12:16
   |
LL | fn _ice(param: Box<dyn for <'a> Trait1<<() as Trait2<'a>>::Ty>>) {
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'a> Trait2<'a>` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/assoc-type-projection-in-dyn-and-fn.rs:8:1
   |
LL | trait Trait2<'a> {
   | ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
